2009-10-18  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        REGRESSION: SVG Mask doesn't work for maskContentUnits="objectBoundingBox"
        [https://bugs.webkit.org/show_bug.cgi?id=30480]

        Patch for SVGMaskElement landed in r49598 should correct the location of
        the mask image graphics context. It only corrects the location for userSpaceOnUse
        mode in maskContentUnits but breaks objectBoundingBoxMode.
        The maskDestRect shouldn't be moved. It is not responsible for the correct context
        postioin but for the correct position of the mask image.
        This patch calculates the context postion independently from the maskDestRect.
        It also uses lineareRGB color space for masking on CG now. This is the default
        color space for masking operations.
        We already have tests for both maskContentUnits modes.

            *svg/W3C-SVG-1.1/masking-intro-01-f.svg
            *svg/custom/mask-with-default-value.svg

        Some tests needed new pixel tests because of the new color space.

        * svg/SVGMaskElement.cpp:
        (WebCore::SVGMaskElement::drawMaskerContent):

2009-10-18  Anton Muhin  <antonm@chromium.org>

        Reviewed by Adam Barth.

        Use v8::Integer::NewFromUnsigned when converting unsigneds into V8's numbers.
        That is notably faster for small numbers (most common case).
        https://bugs.webkit.org/show_bug.cgi?id=30493

        * bindings/scripts/CodeGeneratorV8.pm:

2009-10-18  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Holger Freyther.

        [GTK] Add MathML to the build system
        https://bugs.webkit.org/show_bug.cgi?id=30487

        Add MathML sources if MathML support is enabled.

        * GNUmakefile.am:

2009-10-18  Kevin Ollivier  <kevino@theolliviers.com>

        Non-PCH build fix. Added missing header.

        * bridge/runtime_root.h:

2009-10-18  Simon Fraser  <simon.fraser@apple.com>
