@@ -21,6 +21,8 @@ function doit()
     console.groupEnd();
     console.log('1', '2', '3');
     console.dir(document);
+    console.dir(["test1", "test2"]);
+    console.dir(document.childNodes);
 
     function callback(result)
     {
